--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Pertemuan3"
         tools:targetApi="31">
         <activity
-            android:name=".fortuner"
+            android:name=".pasific"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:theme="@style/NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
